@@ -45,6 +45,7 @@ TESTS += \
 	$(top_srcdir)/topology/test/regress/legacy_predicate.sql \
 	$(top_srcdir)/topology/test/regress/legacy_query.sql \
 	$(top_srcdir)/topology/test/regress/legacy_validate.sql \
+	$(top_srcdir)/topology/test/regress/maketopologyprecise.sql \
 	$(top_srcdir)/topology/test/regress/polygonize.sql \
 	$(top_srcdir)/topology/test/regress/populate_topology_layer.sql \
 	$(top_srcdir)/topology/test/regress/removeunusedprimitives.sql \
@@ -87,5 +88,6 @@ TESTS += \
 	$(top_srcdir)/topology/test/regress/topojson.sql \
 	$(top_srcdir)/topology/test/regress/topologysummary.sql \
 	$(top_srcdir)/topology/test/regress/totopogeom.sql \
+	$(top_srcdir)/topology/test/regress/validatetopologyprecision.sql \
 	$(top_srcdir)/topology/test/regress/validatetopologyrelation.sql \
 	$(top_srcdir)/topology/test/regress/validatetopology.sql
